--- a/index.html
+++ b/index.html
@@ -63,12 +63,6 @@
         <section class="childhood" id="childhood">
             <div class="container">
                 <div class="childhood-content">
-                    <aside class="creation-content-note"></aside>
-                        <div class="note">
-                            <p class="number">1</p>
-                            <p class="text">Основные определения и направления Web 3.0</p>
-                        </div>                      
-                    </aside>
                     <div class="childhood-content-father">
                         <div class="childhood-block-text">
                             <h2 class="childhood-title">ВВЕДЕНИЕ</h2>
@@ -120,13 +114,6 @@
         <section class="creation" id="creation">
             <div class="container">
                 <div class="creation-content">
-                    
-                    <aside class="creation-content-note">
-                        <div class="note">
-                            <p class="number">2</p>
-                            <p class="text">Что такое Web 3.0 и самые перспективные направления развития этой концепции</p>
-                        </div>                      
-                    </aside>
 
                     <div class="creation-content__block">
                         <h2 class="creation-title">КЛЮЧЕВЫЕ НАПРАВЛЕНИЯ РАЗВИТИЯ ИТ В КОНЦЕПЦИИ «WEB 3.0»</h2>
@@ -151,12 +138,10 @@
         <section class="personal-life" id="personal-life">
             <div class="container">
                 <div class="personal-life__content">
-                    <aside class="personal-life-note">
-                    </aside>
 
                     <div class="personal-life__block">
                         <div class="personal-life__text">
-                            <h2 class="personal-life-title">AI и ML</h2>
+                            <h2 class="personal-life-title">AI И ML</h2>
                             <p class="personal-text">Искусственный интеллект (AI) и машинное обучение (ML) являются ключевыми технологиями, которые играют центральную роль в концепции Web 3.0, обеспечивая развитие более умных и автономных цифровых экосистем. В Web 3.0 эти технологии направлены на повышение эффективности и персонализации взаимодействий в сети, а также на управление огромными объёмами данных, которые генерируются пользователями и устройствами [6]. В отличие от предыдущих этапов развития интернета, Web 3.0 опирается на более интеллектуальные системы, которые могут самостоятельно учиться и принимать решения на основе анализа данных, обеспечивая более гибкие и адаптивные решения для пользователей.</p>
                             <p class="personal-text">Одной из важнейших задач AI и ML в Web 3.0 является обеспечение персонализированного опыта для каждого пользователя. Традиционные системы Web 2.0 основывались на централизованной обработке данных, что ограничивало возможности глубокого анализа и персонализации. В Web 3.0, благодаря децентрализации и применению AI/ML, интернет-системы могут настраиваться под конкретные запросы и предпочтения пользователей, анализируя их поведение и взаимодействия с цифровыми сервисами. Это открывает путь к созданию контента и услуг, которые максимально соответствуют потребностям каждого человека, будь то рекомендации в электронной коммерции, персонализированные новостные ленты или адаптированные развлекательные платформы [7].</p>
                             <p class="personal-text">AI и ML также играют ключевую роль в обработке больших данных, которые являются основой Web 3.0. В децентрализованных сетях и приложениях (dApps) данные поступают из множества источников — как от пользователей, так и от подключённых устройств, что создает сложную структуру информации. Машинное обучение позволяет анализировать эти данные в режиме реального времени, выявляя скрытые закономерности и тренды, которые можно использовать для принятия решений и оптимизации работы систем. Это особенно важно в контексте интернета вещей (IoT), где AI и ML помогают координировать работу множества устройств, делая возможным более эффективное управление производственными процессами, умными домами и другими подключёнными системами [8].</p>
@@ -178,66 +163,24 @@
             <div class="container">
                 <div class="end-life__content">
 
-                    <aside class="end-life-content-note">
-                        <div class="note">
-                            <!-- <p class="text">Чехов постоянно находился в плену болезненных ощущений, которые передавал и своим персонажам. Заметнее всего это отразилось в «Рассказе неивестного человека».</p> -->
-                        </div>                       
-                    </aside>
-
                     <div class="end-life__block">
-                        <h2 class="end-life-title">КОНЕЦ ЖИЗНИ</h2>
+                        <h2 class="end-life-title">КУЛЬТУРА И ИСКУССТВО</h2>
                             <div class="end-life__content">
                                 <div class="end-life__text end-text--1">
-                                <p class="end-text">Ещё в 24-летнем возрасте, у Чехова появились признаки заболевания туберкулёзом. У него держалась высокая температура, сопровождающаяся кровавым кашлем, однако сам больной думал, что у него совершенно другая болезнь.</p>
-                                <p class="end-text">На протяжении всей своей биографии писатель тщательно скрывал недуг от родственников и друзей, поскольку не хотел их беспокоить. В 1897 г., болезнь сильно обострилась, а из правого лёгкого начались периодические кровотечения.</p>
+                                <p class="end-text">В концепции «Web 3.0» технологии информационных технологий (ИТ) оказывают существенное влияние на множество сфер, включая культуру и искусство. В эпоху Web 3.0 данная область переживает значительные трансформации, связанные с децентрализацией, цифровизацией творческих процессов и изменением способов взаимодействия между художниками, культурными учреждениями и аудиторией.</p>
+                                <p class="end-text">Культура и искусство в контексте Web 3.0 тесно связаны с появлением новых форм творческого выражения и распространения контента. С внедрением технологий блокчейна и децентрализованных платформ художники получают больше возможностей для контроля над своими произведениями, а аудитория — для взаимодействия с произведениями искусства напрямую, без участия посредников. Одной из ключевых технологий, оказывающей значительное влияние на эту сферу, является искусственный интеллект и машинное обучение (AI/ML).</p>
+                                <p class="end-text">AI используется для создания новых форм искусства, таких как генеративное искусство, где алгоритмы участвуют в создании уникальных произведений на основе данных и заложенных художниками правил. Это открывает новый мир возможностей для креативных экспериментов и расширяет границы традиционного искусства. Кроме того, AI используется для анализа и интерпретации культурных данных. Например, музеи и галереи могут применять машинное обучение для создания персонализированных туров по выставкам или для автоматической каталогизации и архивации произведений искусства [9].</p>
+                                <p class="end-text">Проект Kandinsky, разработанный Сбером, — это одна из самых передовых нейросетей, созданных в России для генерации произведений искусства на основе машинного обучения и искусственного интеллекта [10]. Названный в честь знаменитого художника-авангардиста Василия Кандинского, проект демонстрирует, как AI может стать соавтором и творческим инструментом для художников и культурных деятелей.</p>
+                                <p class="end-text">Одним из главных вкладов Kandinsky и аналогичных проектов в культуру является их способность демократизировать искусство. С помощью таких нейросетей как Kandinsky, любой человек, даже не обладающий художественными навыками, может стать «художником», создавая уникальные работы с помощью AI (рис. 1). Это делает искусство более доступным для широкой аудитории и стимулирует новые формы креативного взаимодействия между технологиями и людьми.</p>
+                            </div>
+                            <div class="end-img__block">
+                                <img class="end__img" src="img/web5.jpg" alt="cult">
+                                <p class="end-text">Рис. 1. Изображение, сгенерированное Kandinsky</p>
                             </div>
                             <div class="end-life__text end-text--2">
-                                <p class="end-text">Писатель понял, что дело очень серьёзное и обследовался у одного из известных специалистов — профессора Остроумова. Для того, чтобы изучить его заболевание, писатель был госпитализирован.</p>
-                                <p class="end-text">Доктора диагностировали болезнь, назначили курс лечения. Но как только болезнь слегка отпустила, Чехов начал проситься выписать его домой. Ему очень хотелось дальше писать, а больничные стены не давали волю фантазии. В 1898-м кровавый кашель участился, приступ мог длиться по несколько суток.</p>
+                                <p class="end-text">Таким образом, Web 3.0 не только радикально трансформирует область культуры и искусства, но и открывает новые горизонты для творческих экспериментов, взаимодействия и распространения искусства, делая его более доступным и персонализированным для глобальной аудитории.</p>
                             </div>
                         </div>                       
-                    </div>
-                </div>
-
-                <div class="end-life__img">
-                    <aside class="end-img-note">  
-                        <div class="note">
-                            <p class="text">Чехов постоянно находился в плену болезненных ощущений, которые передавал и своим персонажам. Заметнее всего это отразилось в «Рассказе неивестного человека».</p>
-                        </div>                   
-                    </aside>
-                    <div class="end-img__block">
-                        <img class="end-img" src="img/end-life.jpg" alt="Чехов чиллит в Ялте">
-                        <p class="end-img-text">Чехов в Ялте</p>
-                    </div>
-                </div>
-
-                <div class="end-life__death death">
-                    <aside class="death-note">  
-                        <div class="note">
-                        </div>                   
-                    </aside>
-
-                    <div class="death__content">
-                        <div class="death__text death-text--1">
-                            <p class="death-text">Чехова часто отправляли на курорт. Его отправляли в Африку. Поэтому Чехов несколько раз ездил на отдых в Ниццу и жил там по нескольку месяцев, чтобы пережить период с осени по весну, а затем возвращался в Россию, пока окончательно не обосновался в Ялте.</p>
-                            <p class="death-text">Когда он находился в Ялте, то болезнь отступала и так продолжалось до тех пор, пока в его жизни не появилась официальная жена — Ольга Книппер. Писатель Бунин был твёрдо уверен, что здоровье Чехову подрывала именно она, своими бесконечными гастролями.</p>
-                        </div>
-                        <div class="death__text death-text--2">
-                            <p class="death-text">Хотя справедливости ради стоит заметить, что в последние годы биографии Чехова его жена отказалась от всех гастролей и оставалась рядом с болеющим мужем вплоть до его кончины.</p>
-                            <img class="death-img" src="img/funeral.jpg" alt="Похороны Чехова">
-                            <p class="death-img-note">Похороны Антона Павловича Чехова</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="end-life__death death-end">
-                    <aside class="death-end-note">  
-                        <div class="note">
-                        </div>                   
-                    </aside>
-
-                    <div class="death-end__content">
-                        <p class="death-end-text">15 июля 1904 года Антон Чехов умер в Баденвайлере. Причиной летального исхода был туберкулез. Началось с того, что ему стало значительно хуже. Когда к нему позвали врача, писатель говорил, что он сейчас умрет. Перед смертью он выпил бокал шампанского и в ту же минуту умер.</p>
                     </div>
                 </div>
             </div>
