--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="hero-content">
                     <div class="hero-title__block">
                         <h1 class="section-title hero__title">
-                            КОНЦЕПТ<span class="last-name">WEB 3.0</span>
+                            КОНЦЕПТ WEB 3.0
                         </h1>
                         <p class="hero__descr">Реферат по учебной дисциплине «Интернет-технологии»</p>
                         <!-- <p class="hero__years">СТАНКИН</p> -->
@@ -103,7 +103,7 @@
 							<p class="childhood-text">Таким образом, развитие ИТ сегодня происходит на стыке различных технологий и сфер жизни, что формирует новые модели ведения бизнеса и взаимодействия в обществе. Цифровая экономика, Индустрия 4.0 и Web 3.0 — это ключевые концепции, которые определяют современные и будущие тренды в мире технологий.</p>
                         </div>
                         <div class="chidhood-block-img">
-                            <img class="father-img" src="img/main.jpg" alt="main">
+                            <img class="father-img" src="img/main.jpg" alt="main" width="458" height="723">
                         </div>
                     </div>
 
@@ -126,7 +126,7 @@
 								<p class="creation-text">Развитие децентрализованных приложений (dApps) — ещё одно важное направление в рамках Web 3.0. Эти приложения функционируют в децентрализованных сетях, таких как Ethereum, что позволяет пользователям получать доступ к цифровым сервисам без необходимости взаимодействия с централизованными платформами, такими как Google или Facebook. dApps обеспечивают новые модели взаимодействия, где пользователи владеют своими данными и могут участвовать в управлении и развитии самих платформ. Интернет вещей (IoT) также играет важную роль в развитии Web 3.0, предоставляя возможность взаимодействия между миллиардами подключённых устройств. IoT в Web 3.0 создаёт среду, где устройства могут автономно обмениваться данными и принимать решения, что улучшает как личные, так и промышленные процессы.</p>
 								<p class="creation-text">Семантический веб и технологии обработки данных также находятся в центре внимания Web 3.0. Семантический веб позволяет интернету «понимать» данные на более глубоком уровне, что делает поиск и взаимодействие с информацией более эффективным. Это достижимо благодаря продвинутым алгоритмам и системам, способным распознавать контекст данных и автоматически связывать их между собой, что позволяет улучшить пользовательский опыт и облегчить доступ к нужной информации. Виртуальная и дополненная реальность (VR/AR) формируют новые способы взаимодействия с цифровым контентом, создавая иммерсивные среды, в которых пользователи могут активно взаимодействовать с информацией, услугами и друг с другом.</p>
 								<p class="creation-text">Однако одной из самых перспективных и активно развивающихся технологий Web 3.0 является искусственный интеллект и машинное обучение (AI/ML). Эти технологии занимают центральное место в концепции интеллектуализации веба, позволяя создавать адаптивные системы, которые могут автоматически обучаться, анализировать огромные объёмы данных и принимать решения на основе полученных знаний. Это позволяет создавать более «умные» цифровые сервисы, которые адаптируются под конкретные требования каждого пользователя [5].</p>
-                                <img class="creation-img" src="img/web4.jpg" alt="it">
+                                <img class="creation-img" src="img/web4.jpg" alt="it" width="723" height="458">
                             </div>
                         </div>
                                      
@@ -152,7 +152,7 @@
                             <p class="personal-text">Таким образом, искусственный интеллект и машинное обучение являются фундаментальными технологиями в развитии Web 3.0. Они обеспечивают персонализацию контента, обработку больших данных, улучшение безопасности и автоматизацию управления децентрализованными системами. В перспективе AI и ML будут играть ещё более важную роль, создавая полностью автономные системы, которые смогут самостоятельно обучаться и адаптироваться к меняющимся условиям, обеспечивая интернет будущего, который будет более умным, безопасным и адаптированным под потребности каждого пользователя.</p>
                         </div>
                         <div class="personal-life__img">
-                            <img class="personal-img" src="img/web3.jpg" alt="ML">
+                            <img class="personal-img" src="img/web3.jpg" alt="ML" width="723" height="458">
                         </div>
                     </div>
                 </div>
@@ -172,13 +172,11 @@
                                 <p class="end-text">AI используется для создания новых форм искусства, таких как генеративное искусство, где алгоритмы участвуют в создании уникальных произведений на основе данных и заложенных художниками правил. Это открывает новый мир возможностей для креативных экспериментов и расширяет границы традиционного искусства. Кроме того, AI используется для анализа и интерпретации культурных данных. Например, музеи и галереи могут применять машинное обучение для создания персонализированных туров по выставкам или для автоматической каталогизации и архивации произведений искусства [9].</p>
                                 <p class="end-text">Проект Kandinsky, разработанный Сбером, — это одна из самых передовых нейросетей, созданных в России для генерации произведений искусства на основе машинного обучения и искусственного интеллекта [10]. Названный в честь знаменитого художника-авангардиста Василия Кандинского, проект демонстрирует, как AI может стать соавтором и творческим инструментом для художников и культурных деятелей.</p>
                                 <p class="end-text">Одним из главных вкладов Kandinsky и аналогичных проектов в культуру является их способность демократизировать искусство. С помощью таких нейросетей как Kandinsky, любой человек, даже не обладающий художественными навыками, может стать «художником», создавая уникальные работы с помощью AI (рис. 1). Это делает искусство более доступным для широкой аудитории и стимулирует новые формы креативного взаимодействия между технологиями и людьми.</p>
+                                <p class="end-text">Таким образом, Web 3.0 не только радикально трансформирует область культуры и искусства, но и открывает новые горизонты для творческих экспериментов, взаимодействия и распространения искусства, делая его более доступным и персонализированным для глобальной аудитории.</p>
                             </div>
                             <div class="end-img__block">
-                                <img class="end__img" src="img/web5.jpg" alt="cult">
+                                <img class="end__img" src="img/web5.jpg" alt="cult" width="723" height="458">
                                 <p class="end-text">Рис. 1. Изображение, сгенерированное Kandinsky</p>
-                            </div>
-                            <div class="end-life__text end-text--2">
-                                <p class="end-text">Таким образом, Web 3.0 не только радикально трансформирует область культуры и искусства, но и открывает новые горизонты для творческих экспериментов, взаимодействия и распространения искусства, делая его более доступным и персонализированным для глобальной аудитории.</p>
                             </div>
                         </div>                       
                     </div>
