--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="hero-content">
                     <div class="hero-title__block">
                         <h1 class="section-title hero__title">
-                            КОНЦЕПТ WEB 3.0
+                            КОНЦЕПТ<span class="last-name">WEB<span class="white-letters"> 3.0</span>
                         </h1>
                         <p class="hero__descr">Реферат по учебной дисциплине «Интернет-технологии»</p>
                         <!-- <p class="hero__years">СТАНКИН</p> -->
