updated pics and style

--- a/index.html
+++ b/index.html
@@ -152,7 +152,10 @@
                             <p class="personal-text">Таким образом, искусственный интеллект и машинное обучение являются фундаментальными технологиями в развитии Web 3.0. Они обеспечивают персонализацию контента, обработку больших данных, улучшение безопасности и автоматизацию управления децентрализованными системами. В перспективе AI и ML будут играть ещё более важную роль, создавая полностью автономные системы, которые смогут самостоятельно обучаться и адаптироваться к меняющимся условиям, обеспечивая интернет будущего, который будет более умным, безопасным и адаптированным под потребности каждого пользователя.</p>
                         </div>
                         <div class="personal-life__img">
-                            <img class="personal-img" src="img/web3.jpg" alt="ML" width="723" height="458">
+                            <img class="personal-img" src="img/web3.jpg" alt="ML" width="458" height="723">
+                        </div>
+                        <div class="personal-life__img">
+                            <img class="personal-img" src="img/web2.jpg" alt="AI and ML" width="723" height="458">
                         </div>
                     </div>
                 </div>
