i hope it's the last update #3

--- a/index.html
+++ b/index.html
@@ -146,10 +146,8 @@
                             <p class="personal-text">Важной перспективой развития AI и ML в Web 3.0 является интеграция этих технологий с блокчейном. Блокчейн обеспечивает безопасное и прозрачное хранение данных, а AI позволяет оптимизировать управление этими данными и автоматизировать процессы их обработки. Одним из примеров такой интеграции являются смарт-контракты, которые могут автоматически обновляться и изменяться в зависимости от анализа данных, полученных через AI-алгоритмы. Это создаёт условия для создания более гибких и адаптивных децентрализованных систем, способных самостоятельно реагировать на изменения в среде и требования пользователей.</p>
                             <p class="personal-text">Таким образом, искусственный интеллект и машинное обучение являются фундаментальными технологиями в развитии Web 3.0. Они обеспечивают персонализацию контента, обработку больших данных, улучшение безопасности и автоматизацию управления децентрализованными системами. В перспективе AI и ML будут играть ещё более важную роль, создавая полностью автономные системы, которые смогут самостоятельно обучаться и адаптироваться к меняющимся условиям, обеспечивая интернет будущего, который будет более умным, безопасным и адаптированным под потребности каждого пользователя.</p>
                         </div>
-                        <div class="personal-life__img">
+                        <div class="image-container">
                             <img class="personal-img" src="img/web2.jpg" alt="ML" width="458" height="723">
-                        </div>
-                        <div class="personal-life__img">
                             <img class="personal-img" src="img/web3.jpg" alt="AI and ML" width="458" height="723">
                         </div>
                     </div>
@@ -174,7 +172,7 @@
                             </div>
                             <div class="end-img__block">
                                 <img class="end__img" src="img/web5.jpg" alt="cult" width="723" height="458">
-                                <p class="end-text">Рис. 1. Изображение, сгенерированное Kandinsky</p>
+                                <p class="end-text">Изображение, сгенерированное Kandinsky</p>
                             </div>
                         </div>                       
                     </div>
