--- a/index.html
+++ b/index.html
@@ -180,6 +180,30 @@
             </div>
 
         </section>
+
+        <section class="conclusion" id="conclusion">
+            <div class="container">
+                <div class="conclusion__content">
+                    <div class="conclusion__block">
+                        <h2 class="conclusion-title">ЗАКЛЮЧЕНИЕ</h2>
+                        <div class="conclusion__content">
+                            <div class="conclusion__text conclusion-text--1">
+                                <p class="conclusion-text">В рамках лабораторной работы была исследована концепция Web 3.0 и её влияние на культуру и искусство. Технологии информационных технологий (ИТ) в эпоху Web 3.0 радикально меняют подходы к творчеству и взаимодействию между художниками, культурными учреждениями и аудиторией.</p>
+                                <p class="conclusion-text">Основные выводы:</p>
+                                <ol class="conclusion-text__list">
+                                    <li>Децентрализация и цифровизация способствуют созданию децентрализованных платформ, которые позволяют художникам напрямую взаимодействовать с аудиторией.</li>
+                                    <li>Искусственный интеллект и машинное обучение открывают новые возможности для создания уникальных произведений искусства.</li>
+                                    <li>Проекты, такие как Kandinsky, демонстрируют, как технологии могут демократизировать искусство, позволяя людям без художественных навыков стать «художниками».</li>
+                                    <li>Технологии Web 3.0 делают искусство более доступным и персонализированным для широкой аудитории.</li>
+                                </ol>
+                                <p class="conclusion-text">Таким образом, Web 3.0 не только трансформирует область культуры и искусства, но и создаёт новые горизонты для творческих экспериментов и распространения искусства, делая его более доступным для глобальной аудитории.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
     </main>
 
     <footer class="footer">
