i hope it's the last update #10

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<p class="childhood-text">Таким образом, развитие ИТ сегодня происходит на стыке различных технологий и сфер жизни, что формирует новые модели ведения бизнеса и взаимодействия в обществе. Цифровая экономика, Индустрия 4.0 и Web 3.0 — это ключевые концепции, которые определяют современные и будущие тренды в мире технологий.</p>
                         </div>
                         <div class="chidhood-block-img">
-                            <img class="father-img" src="img/main.jpg" alt="main" width="458" height="723">
+                            <img class="father-img" src="img/main.jpeg" alt="main" width="458" height="723">
                         </div>
                     </div>
 
