--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                             <div class="end-img__block">
                                 <img class="end__img" src="img/web5.jpg" alt="cult" width="723" height="458">
                                 <p class="end-text">Изображение, сгенерированное Kandinsky</p>
+                                <iframe width="640" height="360" src="https://www.youtube.com/embed/ZUjm39oMM9w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>                       
                     </div>
